# SyncRoom

./: .dockerignore  .gitignore  Dockerfile.server  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: windows-installer.yml
packaging/: PKGBUILD  syncroom.spec
packaging/linux/: syncroom-system.desktop  syncroom.desktop
packaging/windows/: SyncRoom.iss  download_mpv.py
scripts/: check_version_sync.py  install-linux.sh  uninstall-linux.sh
src/syncroom/: __init__.py  __main__.py  client.py  client_media.py  client_media_tools.py  client_osd.py  mpv_controller.py  protocol.py  server.py  settings.py  updater.py  updates.py  windows_runtime.py
src/syncroom/network/: __init__.py  sync_client.py
src/syncroom/ui/: __init__.py  dialogs.py  settings_panel.py  widgets.py
src/syncroom/utils/: __init__.py  logging.py  paths.py
