[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "syncroom"
version = "0.1.3"
description = "A simple synced video room app with a Raspberry Pi friendly server."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "justys" }
]
dependencies = [
  "PySide6-Essentials>=6.8",
  "shiboken6>=6.8"
]

[project.scripts]
syncroom-client = "syncroom.client:main"
syncroom-server = "syncroom.server:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
